Added Title And Heading in Index File

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>First Git Application</title>
 </head>
 <body>
-
+	<h1>First Git Application</h1>
 </body>
 </html>
